--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "homepage": "/angelesSushi",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.77.8",
     "web-vitals": "^2.1.4"
   },
